[package]
name = "rrsync"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
description = "rsync/rdiff/zsync clone"
repository = "https://github.com/remram44/rrsync"
documentation = "https://docs.rs/rrsync/"
license = "BSD-3-Clause"
edition = "2018"


[[bin]]
name = "rrsync"
path = "src/main.rs"

[dependencies]
cdchunking = "1.0.0"
chrono = "0.4"
clap = "2"
log = "0.4"
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
rusqlite = { version = "0.21", features = ["chrono", "bundled"] }
sha1 = "0.6"
ssh2 = {git="https://github.com/alexcrichton/ssh2-rs/blob/master/Cargo.toml", features=["vendored-openssl"]}
dirs = "2.0.2"

[dev-dependencies]
tempfile = "3"
